PR changes added, modularity missing.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<nav class='nav-bar'>
-  <div class='nav-bar-container'>
-    <a routerLink='/' class='normal-link'>
+<nav class="nav-bar">
+  <div class="nav-bar-container">
+    <a routerLink="/" class="normal-link">
 
-      <img src='assets/images/pokedex.png' alt='PokéDex' class='home-link-img' />
+      <img src="assets/images/pokedex.png" alt="PokéDex" class="home-link-img" />
       <mat-icon class="normal-link__icon">home</mat-icon>
     </a>
-    <a routerLink='/pokemons' class='normal-link'>
+    <a routerLink="/pokemons" class="normal-link">
       <span class="normal-link__text">Pokémons</span>
       <mat-icon class="normal-link__icon">list</mat-icon>
     </a>
