--- a/src/app/modules/home-page/components/favorite-carousel/favorite-carousel.component.html
+++ b/src/app/modules/home-page/components/favorite-carousel/favorite-carousel.component.html
@@ -1,5 +1,5 @@
 <ngb-carousel class="carousel">
-  <ng-template *ngFor='let pokemon of favoritesList' class="carousel-slide" ngbSlide>
+  <ng-template *ngFor="let pokemon of favoritesList" class="carousel-slide" ngbSlide>
     <div class="picsum-img-wrapper">
       <img class="carousel-img" [src]="pokemon.imageUrl" alt="Pokémon">
     </div>
