--- a/src/app/modules/home-page/components/home-page/home-page.component.html
+++ b/src/app/modules/home-page/components/home-page/home-page.component.html
@@ -1,8 +1,8 @@
-<div class='welcome-container'>
-  <div class='welcome-card'>
-    <div class='welcome-message-container'>
-      <h1 class='welcome-message'>Favorite Pokemons</h1>
-      <app-favorite-carousel [favoritesList]='favoritePokemonsList$ | async'>
+<div class="welcome-container">
+  <div class="welcome-card">
+    <div class="welcome-message-container">
+      <h1 class="welcome-message">Favorite Pokemons</h1>
+      <app-favorite-carousel [favoritesList]="favoritePokemonsList$ | async">
       </app-favorite-carousel>
     </div>
   </div>
