--- a/src/app/modules/pokemon/components/pokemon-chart/pokemon-chart.component.html
+++ b/src/app/modules/pokemon/components/pokemon-chart/pokemon-chart.component.html
@@ -1,5 +1,5 @@
 <div>
-  <canvas baseChart *ngIf='chartData' [datasets]='chartData' [labels]='chartLabels' [options]='chartOptions'
-    [chartType]='chartType'>
+  <canvas baseChart *ngIf="chartData" [datasets]="chartData" [labels]="chartLabels" [options]="chartOptions"
+    [chartType]="chartType">
   </canvas>
 </div>
