--- a/src/app/modules/pokemon/components/shared/favorite-button/favorite-button.component.html
+++ b/src/app/modules/pokemon/components/shared/favorite-button/favorite-button.component.html
@@ -1,4 +1,4 @@
-<button class='favorite-button' mat-icon-button aria-label="Favorite" [ngClass]="{'active': active, inactive: !active}"
-  (click)='onChangeFavoriteStatus($event)'>
+<button class="favorite-button" mat-icon-button aria-label="Favorite"
+  [ngClass]="{ 'active': active, 'inactive': !active}" (click)="onChangeFavoriteStatus($event)">
   <mat-icon>favorite</mat-icon>
 </button>
