--- a/src/app/modules/home-page/components/favorite-carousel/favorite-carousel.component.css
+++ b/src/app/modules/home-page/components/favorite-carousel/favorite-carousel.component.css
@@ -30,7 +30,7 @@
   text-transform: capitalize;
   transform: translate(-50%, 0%);
   font-weight: 700;
-  font-size: 1.4rem;
+  font-size: var(--carouse-title-size);
 }
 
 
