--- a/src/app/modules/home-page/components/home-page/home-page.component.css
+++ b/src/app/modules/home-page/components/home-page/home-page.component.css
@@ -25,7 +25,7 @@
 }
 
 .welcome-message {
-  font-size: 2.5rem;
+  font-size: var(--welcome-message-size);
   margin-bottom: 1rem;
   text-align: center;
   color: var(--light-black);
@@ -51,7 +51,7 @@
   }
   
   .welcome-message {
-    font-size: 3rem;
+    font-size: var(--big-welcome-message-size);
   }
   
   .welcome-button {
