--- a/src/app/modules/page-not-found/page-not-found.component.css
+++ b/src/app/modules/page-not-found/page-not-found.component.css
@@ -13,7 +13,7 @@
 }
 
 .sorry-title {
-  font-size: 2.5rem;
+  font-size: var(--sorry-title-size);
   line-height: 4rem;
   margin: 0;
 }
@@ -22,7 +22,7 @@
   display: inline-block;
   margin: 0;
   padding: 1rem;
-  font-size: 10rem;
+  font-size: var(--not-found-number-size);
   line-height: 10.5rem;
   font-weight: 500;
 }
@@ -32,7 +32,7 @@
 }
 
 .page-not-found {
-  font-size: 1.5rem;
+  font-size: var(--page-not-found-size);
   margin: 0;
 }
 
@@ -43,9 +43,7 @@
   color: var(--black);
   font-weight: 600;
   text-decoration: none;
-  border-width: 1px;
-  border-style: solid;
-  border-color: var(--gray);
+  border: solid 1px var(--gray);
   border-radius: 0.8rem;
 }
 
