--- a/src/app/modules/pokemon/components/pokemon-list/pokemon-list.component.css
+++ b/src/app/modules/pokemon/components/pokemon-list/pokemon-list.component.css
@@ -30,7 +30,7 @@
 .pokemon__item-name {
   text-align: center;
   color: var(--light-black);
-  font-size: 1.3rem;
+  font-size: var(--pokemon-item-name-size);
   font-weight: 600;
   text-transform: none;
   margin: 1rem;
@@ -40,9 +40,7 @@
 .comparison-pokemon {
   position: fixed;
   background: var(--white);
-  border-style: solid;
-  border-width: 1px;
-  border-color: var(--light-black);
+  border: solid 1px var(--light-black);
   border-radius: 1rem;
   top: 7%;
   right: 1rem;
@@ -50,7 +48,7 @@
 
 .comparison-name {
   font-weight: 500;
-  font-size: 1rem;
+  font-size: var(--comparison-name-size);
   padding: 1rem 2rem;
 }
 
