--- a/src/app/modules/pokemon/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/modules/pokemon/components/pokemon-list/pokemon-list.component.html
@@ -1,11 +1,11 @@
-<div class='list-container'>
-  <ul class='pokemon__items' infiniteScroll (scrolled)='onListScrolled()'>
-    <li class="pokemon__item" *ngFor='let pokemon of filteredPokemonsList' (click)='onPokemonClicked(pokemon)'>
-      <img class="pokemon__item-img" [src]='pokemon.imageUrl' [alt]='pokemon.name' />
+<div class="list-container" infiniteScroll (scrolled)="onListScrolled()">
+  <ul class="pokemon__items">
+    <li class="pokemon__item" *ngFor="let pokemon of filteredPokemonsList" (click)="onPokemonClicked(pokemon)">
+      <img class="pokemon__item-img" [src]="pokemon.imageUrl" [alt]="pokemon.name" />
       <h3 class="pokemon__item-name">
         {{ pokemon.name.charAt(0).toUpperCase() + pokemon.name.slice(1) }}
       </h3>
-      <app-favorite-button [active]='true' [favoritesList]='favoritesList' [pokemon]='pokemon'>
+      <app-favorite-button [active]="true" [favoritesList]="favoritesList" [pokemon]="pokemon">
       </app-favorite-button>
     </li>
   </ul>
