--- a/src/app/modules/pokemon/components/pokemon-modal/pokemon-modal.component.css
+++ b/src/app/modules/pokemon/components/pokemon-modal/pokemon-modal.component.css
@@ -16,9 +16,7 @@
   border-radius: 0.3rem;
   padding: 0.2rem 1rem;
   margin-left: 3.5rem;
-  border-style: solid;
-  border-width: 1px;
-  border-color: var(--white);
+  border: solid 1px var(--white);
   background: var(--redish);
   color: var(--white);
 }
@@ -35,9 +33,7 @@
   border-radius: 50%;
   cursor: pointer;
   color: var(--redish);
-  border-style: solid;
-  border-width: 1px;
-  border-color: var(--redish);
+  border: solid 1px var(--redish);
 }
 
 .pokemon-container {
@@ -80,9 +76,7 @@
   display: inline-block;
   margin: 0 0.2rem;
   padding: 0.5rem 1rem;
-  border-style: solid;
-  border-width: 1px;
-  border-color: var(--white);
+  border: solid 1px var(--white);
   border-radius: 5px;
   color: var(--white);
 }
@@ -103,16 +97,14 @@
 }
 
 .bordered {
-  border-color: var(--gray-border);
-  border-width: 1px;
-  border-style: solid;
+  border: solid 1px var(--gray-border);
   border-top: none;
   border-bottom: none;
 }
 
 .information-container__item-value,
 .information-container__item-name {
-  font-size: 1rem;
+  font-size: var(--pokemon-card-name-size);
   color: var(--light-black);
   font-weight: 500;
   margin: 0.5rem;
