--- a/src/app/modules/pokemon/components/comparison-modal/comparison-modal.component.html
+++ b/src/app/modules/pokemon/components/comparison-modal/comparison-modal.component.html
@@ -14,43 +14,16 @@
         <img class="comparison-pokemon-img" [src]="pokemon2.imageUrl" [alt]="pokemon2.name" />
       </div>
       <h2 class="pokemon-name">{{ pokemon.name.toUpperCase() + " vs " + pokemon2.name.toUpperCase()}}</h2>
-      <div class="information-container">
-        <div *ngFor="let item of pokemon.information | keyvalue; let i = index" [class]="informationClasses[i]">
-          <h3 class="information-container__item-value">{{ item.value + informationUnits[i] }}</h3>
-          <h3 class="information-container__item-name">{{ item.key.charAt(0).toUpperCase() + item.key.slice(1) }}
-          </h3>
-          <h3 class="information-container__item-value">
-            {{ pokemon2.information[item.key] + informationUnits[i] }}
-          </h3>
-        </div>
-      </div>
+      <app-pokemon-information [pokemon]="pokemon" [pokemon2]="pokemon2"></app-pokemon-information>
     </div>
     <div class="pokemon-container">
-      <div class="pokemon-container__title">
-        <img class="pokemon-container__title-img" src="assets/images/gray-pokeball.png" alt="Pokeball" />
-        <h3 class="pokemon-container__title-text">Abilities</h3>
-      </div>
-      <div class="abilities-container">
-        <ul class="abilities-list">
-          <li *ngFor="let item of pokemon.abilities" class="abilities-item">
-            {{ item.ability.name.charAt(0).toUpperCase() + item.ability.name.slice(1) }}
-          </li>
-        </ul>
-        <ul class="abilities-list">
-          <li *ngFor="let item of pokemon2.abilities" class="abilities-item right-oriented-list">
-            {{ item.ability.name.charAt(0).toUpperCase() + item.ability.name.slice(1) }}
-          </li>
-        </ul>
-      </div>
+      <app-container-title [title]="containerTitles[0]"></app-container-title>
+      <app-pokemon-abilities [pokemon]="pokemon" [pokemon2]="pokemon2"></app-pokemon-abilities>
     </div>
     <div class="pokemon-container">
-      <div class="pokemon-container__title">
-        <img class="pokemon-container__title-img" src="assets/images/gray-pokeball.png" alt="Pokeball" />
-        <h3 class="pokemon-container__title-text">Stats</h3>
-      </div>
+      <app-container-title [title]="containerTitles[1]"></app-container-title>
       <app-pokemon-chart [firstPokemon]="firstPokemon$ | async" [secondPokemon]="secondPokemon$ | async">
       </app-pokemon-chart>
     </div>
-    <h2 class="pokemon-text">{{ pokemon.name.toUpperCase() }}</h2>
   </div>
 </div>
