--- a/src/app/modules/pokemon/components/pokemon-home-page/pokemon-home-page.component.html
+++ b/src/app/modules/pokemon/components/pokemon-home-page/pokemon-home-page.component.html
@@ -1,5 +1,5 @@
 <div class="home-page-container">
-  <input class="search-input" placeholder="Search" (input)="updateSearchContent($event.target.value)">
+  <app-search-bar></app-search-bar>
   <app-pokemon-list [pokemonsList]="pokemonsList$ | async" [favoritesList]="favoritePokemonsList$ | async"
     [isComparing]="isComparing$ | async" [searchContent]="searchContent$ | async">
   </app-pokemon-list>
